# Trustworthy-AI

./: .gitignore  Agent Card.md  Blueprint Card  Container Card  Data Card  Helm Chart  LICENSE.md  Model Card Privacy Subcard  README.md  SKILL.md  Safety & Security Subcard  Skill Card.md  SkillCardTemplate.md.txt  System Card
AI Transparency Card Automation/: Skill Card Generator Skill Card.md
ASL Developer Community/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  THIRD-PARTY-NOTICES.txt  get-onboarded-with-superannotate.md  pyproject.toml
ASL Developer Community/notebooks/: asl_data_pipeline.ipynb
ASL Developer Community/scripts/: asl_data_pipeline.py  asl_data_postprocessing.py
ASL Developer Community/src/asl_data_pipeline/: __init__.py
ASL Developer Community/src/asl_data_pipeline/data/: __init__.py
ASL Developer Community/src/asl_data_pipeline/models/: __init__.py  manifest.py  s3.py
ASL Developer Community/src/asl_data_pipeline/preprocessing/: __init__.py
ASL Developer Community/src/asl_data_pipeline/preprocessing/face_landmark_extractor/: __init__.py  extractor.py  models.py
ASL Developer Community/src/asl_data_pipeline/preprocessing/hand_landmark_extractor/: extractor.py  models.py
ASL Developer Community/src/asl_data_pipeline/preprocessing/hand_sa_converter/: converter.py  models.py
ASL Developer Community/src/asl_data_pipeline/preprocessing/key_frame_extractor/: extractor.py  models.py
ASL Developer Community/src/asl_data_pipeline/preprocessing/pose_extractor/: extractor.py  models.py
ASL Developer Community/src/asl_data_pipeline/preprocessing/pose_sa_converter/: converter.py  models.py
ASL Developer Community/src/asl_data_pipeline/utils/: __init__.py  image_processing.py  s3_client.py  s3_utils.py  video_utils.py
ASL Developer Community/tests/: __init__.py
ASL Developer Community/tests/data/: 5xwRgAwJrmW3VhrBTNhicgWpXS33_1740260341-707000000.webm
ASL Developer Community/tests/preprocessing/: test_out_of_bound_removal.py
ASL Developer Community/tests/preprocessing/hand_landmark_extractor/: test_extractor.py
ASL Developer Community/tests/preprocessing/hand_sa_converter/: test_converter.py
ASL Developer Community/tests/preprocessing/key_frame_extractor/: test_extractor.py
ASL Developer Community/tests/preprocessing/pose_extractor/: test_extractor.py
ASL Developer Community/tests/preprocessing/pose_sa_converter/: test_converter.py
CycloneDX-Property-Taxonomy/: cyclonedx-property-taxonomy.md
Model Card++ Templates/: Bias Subcard Template  Model Card Explainability Subcard  Model Card Overview Template  Model Card Privacy Subcard  README  README.md  Safety & Security Subcard
Signs (American Sign Language)/: bias subcard (SIGNS External).md  overview (SIGNS External).md  (+3 more)
(+15 files in other folders)
